--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
     <properties>
         <java.version>19</java.version>
     </properties>
+    <properties>
+       <sonar.organization>s-rojash</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 
     <dependencies>
         <dependency>
